Fix css overflow issues Update skills

--- a/src/App.css
+++ b/src/App.css
@@ -21,10 +21,9 @@ body, html,#root,.App {
   grid-column: 2;
   grid-row: 2;
   padding-top:81px ;
-  overflow: hidden;
+  overflow-x: auto;
   box-sizing: border-box;
 }
-
 @media screen and  (max-width: 768px){
   .App{
     display: block;
