--- a/src/components/sideBar/SideBar.css
+++ b/src/components/sideBar/SideBar.css
@@ -116,7 +116,7 @@ h1.skill_name {
 .logo_container {
     display: grid;
     grid-template-columns: 32px 32px;
-    align-content: center;
+    align-content: end;
     gap: 44px;
 }
 
